--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A magical beast that can shrink and enlarge images from your browser",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:serve": "python3 -m flask run"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,6 @@
   },
   "homepage": "https://github.com/zapalblizh/Occamy#readme",
   "dependencies": {
-    "python3": "^0.0.1"
+    "alpinejs": "^3.14.0"
   }
 }
