--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/zapalblizh/Occamy/issues"
   },
-  "homepage": "https://github.com/zapalblizh/Occamy#readme",
-  "dependencies": {
-    "alpinejs": "^3.14.0"
-  }
+  "homepage": "https://github.com/zapalblizh/Occamy#readme"
 }
